--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <li>Otoño - 21 septiembre</li>
       <li>Invierno - 21 diciembre</li>
     </ol>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel voluptates, necessitatibus itaque sunt quia vitae delectus earum quis eligendi, id sed ipsum nam quaerat facilis perspiciatis eaque facere libero blanditiis!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate obcaecati minus fuga voluptas exercitationem provident a nisi ipsum quod illo necessitatibus deserunt sequi eveniet, maiores voluptatibus iure. Hic, odit aliquam.</p>
     <script src="index.js"></script>
   </body>
 </html>
