Agregando imagen de flujo git y poniendo chulo el index.html

--- a/index.html
+++ b/index.html
@@ -9,22 +9,9 @@
   </head>
   <body>
     <h1>Aprendiendo Git</h1>
-    <p>Mis primeros pasos en el versionado de código y aprendiendo a resolver conflictos entre ramas</p>
-    <ul>
-      <li>Elemento 1</li>
-      <li>Elemento 2</li>
-      <li>Elemento 3</li>
-      <li>Elemento 4</li>
-      <li>Elemento 5</li>
-    </ul>
-    <ol>
-      <li>Primavera - 21 marzo</li>
-      <li>Verano - 21 junio</li>
-      <li>Otoño - 21 septiembre</li>
-      <li>Invierno - 21 diciembre</li>
-    </ol>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel voluptates, necessitatibus itaque sunt quia vitae delectus earum quis eligendi, id sed ipsum nam quaerat facilis perspiciatis eaque facere libero blanditiis!</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate obcaecati minus fuga voluptas exercitationem provident a nisi ipsum quod illo necessitatibus deserunt sequi eveniet, maiores voluptatibus iure. Hic, odit aliquam.</p>
+    <p>Mis primeros pasos en el versionado de código con Git y GitHub</p>
+    <p>Quieres dominar el uso de git mira este <a href="https://www.youtube.com/watch?v=suzMNqDQiyU&t=12139s" target="_blank">enlace</a></p>
+    <img src="Screenshot_1.png" alt="" />
     <script src="index.js"></script>
   </body>
 </html>
